(feat) add /uuid endpoint
